--- a/style/custom.less
+++ b/style/custom.less
@@ -1,3 +1,10 @@
+
+@brand-primary: #C00080;
+
+.btn.btn-primary {
+  box-shadow: inset rgba(0,0,0,0.2) 0 -3px 0;
+}
+
 body { height: 100%; margin: 0; }
 #content { padding-top: 100px; padding-bottom: 20px; }
 #landing { background-color: #eee; }
