--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,10 +3,9 @@ html
   head
     meta(charset='utf-8')
     block title
-      title Readable Lists
+      title Readable Email
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     block head
-    link(href='//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css', rel='stylesheet')
     link(href=asset('/style/bundle.css'), rel='stylesheet')
   body
     #wrap
@@ -18,35 +17,30 @@ html
               span.icon-bar
               span.icon-bar
               span.icon-bar
-            a.navbar-brand(href='/') Readable Lists
+            a.navbar-brand(href='/') Readable Email
           .collapse.navbar-collapse
             block navigation
             ul.nav.navbar-nav.navbar-right
               li
-                if !isAuthenticated
-                  a(href="/login/github?return=" + encodeURIComponent(url)) login
-                else
-                  li.dropdown
-                    a.dropdown-toggle(href="/account" data-toggle="dropdown")
-                      = user.email
-                      span.caret
-                    ul.dropdown-menu(role='menu')
-                      li
-                        a(href="/account") account
-                      li
-                        a(href="/logout?return=" + encodeURIComponent(url)) logout
+                a(href="/premium") Get Premium
       #content.container
         block content
-        if sponsorships && sponsorships.length > 0
+        block premium-beta
           .panel.panel-default
             .panel-heading
-              h3.panel-title Sponsored By
+              h3.panel-title Want more features?
             .panel-body
-              p
-                = sponsorships.slice(0, sponsorships.length - 1).join(', ')
-                = sponsorships.length === 1 ? sponsorships[0] : ' and ' + sponsorships[sponsorships.length - 1]
-              a(href="/account/sponsor?list=" + encodeURIComponent(list._id) + "&return=" + encodeURIComponent(url))
-                | (become a sponsor for $20 per month)
+              p.
+                Request early access to our private beta of readable email premium.
+              form(method="post" action="/premium")
+                input(type="hidden" name="_csrf" value=_csrf)
+                .row
+                  .col-sm-9
+                    .form-group
+                      label.sr-only(for="email") Email address
+                      input#email.form-control.input-lg(type="email" placeholder="me@example.com" name="email")
+                  .col-sm-3
+                    button.btn.btn-primary.btn-lg.btn-block(type="submit") Get Premium
       #push
     #footer-wrapper
       footer
@@ -55,6 +49,16 @@ html
           a.jepso(href='https://www.jepso.com') JEPSO
         p By using this site you consent to the use of cookies
 
-    script(src='http://code.jquery.com/jquery-1.10.1.min.js')
+    script(src='//code.jquery.com/jquery-1.10.1.min.js')
     script(src='//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js')
+    script.
+      var csrf = "#{_csrf}";
     block scripts
+    script.
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-31798041-4', 'auto');
+      ga('send', 'pageview');
