--- a/views/listing.jade
+++ b/views/listing.jade
@@ -16,7 +16,7 @@ mixin pagination(page)
       li
         a(href=previousPage rel='previous') « Newer
     li
-      a(href=path) Page #{page}
+      a(href=path) Page #{page + 1}
     if last
       li.disabled
         a(disabled) Older »
@@ -27,7 +27,7 @@ mixin pagination(page)
 block navigation
   ul.nav.navbar-nav
     li.active
-      a(href='/' + list._id)= list._id
+      a(href='/list/' + list._id)= list._id
 
 
 block content
@@ -45,7 +45,7 @@ block content
     .col-md-12
       ul.topics
         for topic in topics
-          - var href = topic._id.replace(/^.*\#/, list._id + '/');
+          - var href = topic._id.replace(/^.*\#/, '/list/' + list._id + '/topic/');
 
           li.topic-title
             h4
@@ -65,4 +65,4 @@ block content
 
 
   .center
-    mixin pagination(page)
+    +pagination(page)
