--- a/views/sponsor.jade
+++ b/views/sponsor.jade
@@ -31,9 +31,18 @@ block content
       label.col-sm-4.control-label(for="sponsor_name") Sponsor Name (optional)
       .col-sm-8
         input.form-control(name="sponsor_name" type="text" placeholder="anonymous")
+        p.help-block.
+          If you want to publicise the fact that you are sponsoring this list, tell us your name.
+    .form-group
+      label.col-sm-4.control-label(for="sponsor_url") Sponsor URL (optional)
+      .col-sm-8
+        input.form-control(name="sponsor_url" type="text" placeholder="http://example.com")
+        p.help-block.
+          If you want your name to link to somewhere, give us the url.
     .form-group
       .col-sm-offset-4.col-sm-8
         input.btn.btn-primary.btn-lg.btn-block(type="submit" value="Sponsor " + listId + " for $20 per month")
+
 block scripts
   script(src="https://js.stripe.com/v2/")
   script.
