--- a/views/topic.jade
+++ b/views/topic.jade
@@ -10,7 +10,7 @@ block scripts
 block navigation
   ul.nav.navbar-nav
     li
-      a(href='/' + list._id)= list._id
+      a(href='/list/' + list._id)= list._id
     li.active
       a(href=path)= topic.subject
 
@@ -19,7 +19,7 @@ block content
     .col-md-12
       h1.topic-title= topic.subject
   - var mid = 0
-  for message in messages
+  for message, i in messages
     .row(data-message=message._id, id='content-' + mid)
       .hidden-xs.col-sm-1.col-md-1.profile-image
         a(href=message.from.profile)
@@ -27,8 +27,6 @@ block content
       .col-xs-12.col-sm-11.col-md-11
         .comment-wrapper
           .comment-header
-            a(href='#content-' + mid) #
-            |  #{message.from.name || message.from.email.replace(/@/g, ' at ')} (#{message.date.fromNow()})
             ul.buttons
               if (message.updated)
                 li
@@ -43,21 +41,15 @@ block content
                 a.link(href=message._id)
                   i.icon-share-alt
                   span.hidden-xs  Go to Source
+            a(href='#content-' + mid) #
+            |  #{message.from.name || message.from.email.replace(/@/g, ' at ')} (#{message.date.fromNow()})
           .comment-body
             .formatted-view
               != message.edited
             .source-view(style='display: none;')
               pre= message.body
+        if mid === 0
+          .panel.panel-default
+            .panel-body
+              | #[a(href="mailto:contact@jepso.com") Contact us] to advertise here
     - mid++
-  if hiddenMessages !== 0
-    .panel.panel-primary
-      .panel-heading
-        h3.panel-title Read More?
-      .panel-body
-        p.
-          There are #{hiddenMessages} messages that are fewer than 7 days old, but nobody has
-          sponsored this mailing list.
-        a.btn.btn-primary.btn-lg.btn-block(href="/account/sponsor?list=" + encodeURIComponent(list._id) + "&return=" + encodeURIComponent(url))
-          | Sponsor List
-          br
-          | (just $20 per month)
