Restrict title width so navbar doesn't reflow

--- a/style/custom.less
+++ b/style/custom.less
@@ -225,3 +225,27 @@ textarea {
 .topic-title {
   margin-bottom: 1em;
 }
+
+@media (min-width: 768px) {
+  .navbar-topic-title {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    max-width: 190px;
+  }
+}
+@media (min-width: 995px) {
+  .navbar-topic-title {
+    max-width: 300px;
+  }
+}
+@media (min-width: 1007px) {
+  .navbar-topic-title {
+    max-width: 400px;
+  }
+}
+@media (min-width: 1203px) {
+  .navbar-topic-title {
+    max-width: 600px;
+  }
+}
