--- a/views/topic.jade
+++ b/views/topic.jade
@@ -11,8 +11,8 @@ block navigation
   ul.nav.navbar-nav
     li
       a(href='/list/' + list._id)= list._id
-    li.active
-      a(href=path)= topic.subject
+    li
+      a.active.navbar-topic-title(href=path)= topic.subject
 
 block content
   .row
