--- a/views/topic.jade
+++ b/views/topic.jade
@@ -42,7 +42,7 @@ block content
                   i.icon-share-alt
                   span.hidden-xs  Go to Source
             a(href='#content-' + mid) #
-            |  #{message.from.name || message.from.email.replace(/@/g, ' at ')} (#{message.date.fromNow()})
+            |  #{message.from.name || message.from.email.replace(/@/g, ' at ')} (#{moment(message.date).fromNow()})
           .comment-body
             .formatted-view
               != message.edited
